k8s/manifests/02-networking/04-monitoring-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-route
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: refit-gateway
    namespace: refit-app
  hostnames:
  - "monitoring.re-fit.kr"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: monitoring-prometheus-grafana
      port: 80
